--- a/index.html
+++ b/index.html
@@ -95,25 +95,36 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
+    <!-- Hero1 Section -->
     <section id="hero" class="hero section dark-background">
 
       <img src="assets/img/hero-bg.png" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Jesse Lucus</h2>
+        <h2>jlucus.dev - Developer Profile </h2>
         <p>I'm <span class="typed" data-typed-items="a Developer,a Freelancer,an Entreprenuer,a Hacker,a Felon,a Veteran ">a Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
 
-    <!-- About Section -->
-    <section id="about" class="about section">
+    <!-- Hero2 Section -->
+    <section id="hero1" class="hero section dark-background">
+
+      <img src="assets/img/hero-bg1.png" alt="" data-aos="fade-in" class="">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <h2>About</h2>
+        <p>I'm <span class="typed" data-typed-items="My name is Jesse, or just J. for short is what I prefer. A little about me: My life has consistently led me at an intersection betweem Media, Internet, Information, I am passionate about the work that I do, And getting to create every day for a profession. ">More than just a Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+      </div>
+
+    </section><!-- /Hero Section -->
+
+    
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>My name is Jesse, or just J. for short is what I prefer. A little about me: My life has consistently led me at an intersection betweem media, and the internet. I am passionate about the work that I do and getting to create every day for a profession.</p>
+        <p></p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
