--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
           <ul>
             <li class="dropdown"><a href="#"><span>Fused Gaming</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">Fused.gg</a></li>
-                <li><a href="#">Leaderboards.vip</a></li>
-                <li><a href="#">Lacroixla.com</a></li>
-                <li><a href="#">Cleanswipe.tv</a></li>
+                <li><a href="https://fused.gg">Fused.gg</a></li>
+                <li><a href="https://leaderboards.vip">Leaderboards.vip</a></li>
+                <li><a href="https://lacroixla.com">Lacroixla.com</a></li>
+                <li><a href="https://cleanswipe.tv">Cleanswipe.tv</a></li>
                 <li><a href="#">Deep Dropdown 5</a></li>
               </ul>
             </li>
             <li class="dropdown"><a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">CAYC: Prison Queen</a></li>
-                <li><a href="#">CYAC Cases Concept</a></li>
+                <li><a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC: Prison Queen</a></li>
+                <li><a href="https://caycdrop.web.app/">CYAC Cases Concept</a></li>
               </ul>
             </li>
-            <li><a href="#">StakeReloadXS</a></li>
-            <li><a href="#">TokenSniped.com</a></li>
-            <li><a href="#">Hubleed</a></li>
-            <li><a href="#">Formerly Incarcerated</a></li>
-            <li><a href="#">ItsDifferentProductions.com</a></li>
+            <li><a href="https://stakereloadxs.com">StakeReloadXS</a></li>
+            <li><a href="https://tokensniped.com">TokenSniped.com</a></li>
+            <li><a href="https://hubleed.com">Hubleed</a></li>
+            <li><a href="https://formerlyincarcerated.org">Formerly Incarcerated</a></li>
+            <li><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com</a></li>
 
 
           </ul>
@@ -113,8 +113,8 @@
       <img src="assets/img/hero-bg1.png" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>About</h2>
-        <p>I'm <span class="typed" data-typed-items="My name is Jesse, or just J. for short is what I prefer. A little about me: My life has consistently led me at an intersection betweem Media, Internet, Information, I am passionate about the work that I do, And getting to create every day for a profession. ">More than just a Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <h2>hello@jlucus.dev</h2>
+        <p>Hey, .. <span class="typed" data-typed-items="My name is Jesse, or just J. for short is what I prefer. A little about me: My life has consistently led me at an intersection betweem Media, Internet, Information, I am passionate about the work that I do, And getting to create every day for a profession. ">More than just a Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
