--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>JLucus.Dev - Portfolio </title>
+  <meta content="Web 3 Full Stack Engineer" name="description">
+  <meta content="Web 3 Full Stack Engineer, Blockchain Developer, Decentralized Applications (dApps), Solidity Programming, Ethereum Development, Smart Contracts, React.js, Node.js, IPFS, Truffle Suite, Metamask Integration, Decentralized Finance (DeFi), NFT Development, Cryptocurrency, Hyperledger Fabric, Web Development, Front-End Development, Back-End Development, Full-Stack Development, JavaScript, Python, Rust Programming, Cryptographic Protocols, Distributed Systems, Consensus Algorithms" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -35,13 +35,13 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle border-outside 2px">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Jesse Lucus</h1>
+      <h1 class="sitename">JLucus.Dev</h1>
     </a>
 
     <div class="social-links text-center">
