--- a/service-details.html
+++ b/service-details.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - iPortfolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Service Details - JLucus.Dev</title>
+  <meta content="Jesse Lucus's Developer Portfolio Website" name="description">
+  <meta content="Web3 Full Stack Engineer, Blockchain Developer, Decentralized Applications (dApps), Solidity Programming, Ethereum Development, Smart Contracts, React.js, Node.js, IPFS, Truffle Suite, Metamask Integration, Decentralized Finance (DeFi), NFT Development, Cryptocurrency, Hyperledger Fabric, Web Development, Front-End Development, Back-End Development, Full-Stack Development, JavaScript, Python, Rust Programming, Cryptographic Protocols, Distributed Systems, Consensus Algorithms" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="service-details-page">
@@ -42,21 +34,23 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-image.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Jesse Lucus - Web 3 Fullstack Engineer</h1>
     </a>
 
     <div class="social-links text-center">
       <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+      <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
       <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="#" class="spotify"><i class="bi bi-spotify"></i></a>
+      <a href="#" class="discord"><i class="bi bi-discord"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -120,26 +114,26 @@
               <a href="#">Marketing</a>
             </div>
 
-            <h4>Enim qui eos rerum in delectus</h4>
-            <p>Nam voluptatem quasi numquam quas fugiat ex temporibus quo est. Quia aut quam quod facere ut non occaecati ut aut. Nesciunt mollitia illum tempore corrupti sed eum reiciendis. Maxime modi rerum.</p>
+            <h4>Web Design</h4>
+            <p>We're serious about User Experience!</p>
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <h3>Happy Brand Image = Unforgettable Brand</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              It is no suprise that positive vibes have higher retention with brand audiences.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>User Experience or UI/UX Design is the science of user interactions.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Companies who spent time studying user engagements report much higher retention.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Sentiment analysis can save countless hours at scale.</span></li>
             </ul>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              Several tools are available for sentiment analysis, including MonkeyLearn, Lexalytics, and Hootsuite. These platforms, along with Userlytics' AI sentiment analysis tool, help businesses interpret user sentiment across digital experiences. Tools like Userlytics integrate sentiment analysis directly into user testing platforms, making it easier to gather valuable insights.
             </p>
             <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
+              sentiment analysis helps companies save time and resources by automating the emotional analysis of user feedback. Tools like Userlytics provide quick, actionable insights, enabling businesses to enhance the user experience more efficiently. 
             </p>
           </div>
 
@@ -155,14 +149,14 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">JLucus.Dev</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://jlucus.dev/">jlucus.dev with ❤️ in the Bay Area.</a>
       </div>
     </div>
 
