--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Jlucus.dev - Developer Profile</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>JLucus.Dev - Developer Profile</title>
+  <meta content="Web 3 Full Stack Engineer" name="description">
+  <meta content="Web 3 Full Stack Engineer, Blockchain Developer, Decentralized Applications (dApps), Solidity Programming, Ethereum Development, Smart Contracts, React.js, Node.js, IPFS, Truffle Suite, Metamask Integration, Decentralized Finance (DeFi), NFT Development, Cryptocurrency, Hyperledger Fabric, Web Development, Front-End Development, Back-End Development, Full-Stack Development, JavaScript, Python, Rust Programming, Cryptographic Protocols, Distributed Systems, Consensus Algorithms" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -52,6 +52,9 @@
       <a class="mx-2" href="https://www.linkedin.com/in/supitsj/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
       <a class="mx-2" href="https://www.instagram.com/Sup1tsJ" target="_blank"><i class="fab fa-instagram"></i></a>
       <a class="mx-2" href="https://www.youtube.com/@SupItsJ" target="_blank"><i class="fab fa-youtube"></i></a>
+      <a class="mx-2" href="https://www.spotify.com/" target="_blank"><i class="fab fa-spotify"></i></a>
+      <a class="mx-2" href="https://www.twitch.com/supitsj" target="_blank"><i class="fab fa-twitch"></i></a>
+      <a class="mx-2" href="https://www.github.com/jlucus" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
     </div>
@@ -64,7 +67,7 @@
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
       </ul>
-      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures</span> <i
+      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & Works-In-Progress</span> <i
             class="bi bi-chevron-down toggle-dropdown"></i></a>
         <ul>
           <li class="dropdown"><a href="#"><span>Fused Gaming</span> <i
@@ -74,7 +77,7 @@
               <li><a href="#">Leaderboards.vip</a></li>
               <li><a href="#">Lacroixla.com</a></li>
               <li><a href="#">Cleanswipe.tv</a></li>
-              <li><a href="#">Deep Dropdown 5</a></li>
+              <li><a href="#">Britanycorp</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
