--- a/service-details.html
+++ b/service-details.html
@@ -156,7 +156,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://jlucus.dev/">jlucus.dev with ❤️ in the Bay Area.</a>
+        Designed by <a href="https://jlucus.dev/">jlucus.dev with </a><p>❤️ in the Bay Area.</p>
       </div>
     </div>
 
