--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle border-outside 3px">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -47,14 +47,13 @@
     </a>
 
     <div class="social-links text-center">
-      <a class="mx-2" href="https://twitter.com/Jandrew_Tate" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a class="mx-2" href="https://t.me/supitsj" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-      <a class="mx-2" href="https://www.linkedin.com/in/supitsj/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      <a class="mx-2" href="https://www.instagram.com/Sup1tsJ" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a class="mx-2" href="https://www.youtube.com/@SupItsJ" target="_blank"><i class="fab fa-youtube"></i></a>
-      <a class="mx-2" href="https://www.spotify.com/" target="_blank"><i class="fab fa-spotify"></i></a>
-      <a class="mx-2" href="https://www.twitch.com/supitsj" target="_blank"><i class="fab fa-twitch"></i></a>
-      <a class="mx-2" href="https://www.github.com/jlucus" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="#" class="spotify"><i class="bi bi-spotify"></i></a>
+      <a href="#" class="discord"><i class="bi bi-discord"></i></a>
     </div>
 
     </div>
