--- a/service-details.html
+++ b/service-details.html
@@ -34,7 +34,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-image.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -55,29 +55,41 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <ul>
-            <li><a href="#">Dropdown 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Deep Dropdown 1</a></li>
-                <li><a href="#">Deep Dropdown 2</a></li>
-                <li><a href="#">Deep Dropdown 3</a></li>
-                <li><a href="#">Deep Dropdown 4</a></li>
-                <li><a href="#">Deep Dropdown 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Dropdown 2</a></li>
-            <li><a href="#">Dropdown 3</a></li>
-            <li><a href="#">Dropdown 4</a></li>
-          </ul>
-        </li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+      </ul>
+      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & Works-In-Progress</span> <i
+            class="bi bi-chevron-down toggle-dropdown"></i></a>
+        <ul>
+          <li class="dropdown"><a href="#"><span>Fused Gaming</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Fused.gg</a></li>
+              <li><a href="#">Leaderboards.vip</a></li>
+              <li><a href="#">Lacroixla.com</a></li>
+              <li><a href="#">Cleanswipe.tv</a></li>
+              <li><a href="#">Britanycorp</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">CAYC: Prison Queen</a></li>
+              <li><a href="#">CYAC Cases Concept</a></li>
+            </ul>
+          </li>
+          <li><a href="#">StakeReloadXS</a></li>
+          <li><a href="#">TokenSniped.com</a></li>
+          <li><a href="#">Hubleed</a></li>
+          <li><a href="#">Formerly Incarcerated</a></li>
+          <li><a href="#">ItsDifferentProductions.com</a></li>
+
+
+        </ul>
+      </li>
+      <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
 
@@ -152,10 +164,6 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">JLucus.Dev</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://jlucus.dev/">jlucus.dev with </a><p>❤️ in the Bay Area.</p>
       </div>
     </div>
