--- a/service-details.html
+++ b/service-details.html
@@ -61,7 +61,8 @@
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
       </ul>
-      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & Works-In-Progress</span> <i
+      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & 
+        Works-In-Progress</span> <i
             class="bi bi-chevron-down toggle-dropdown"></i></a>
         <ul>
           <li class="dropdown"><a href="#"><span>Fused Gaming</span> <i
