--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Feb 17</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.jlucus.dev</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+916 850 0372</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 916 850 0372</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Oakland CA, USA</span></li>
                 </ul>
               </div>
@@ -311,7 +311,11 @@
     </section><!-- /Skills Section -->
 
     <!-- Resume Section -->
+     
     <section id="resume" class="resume section">
+      <div class="profile-img">
+        <img src="assets/img/hero-bg2.jpg" alt="" class="img-fluid rounded-circle border-outside 3px">
+      </div>
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
