--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
     </section><!-- /Skills Section -->
 
     <!-- Resume Section -->
-     
+
     <section id="resume" class="resume section">
       <div class="profile-img">
-        <img src="assets/img/hero-bg2.jpg" alt="" class="img-fluid rounded-circle border-outside 3px">
+        <img src="assets/img/hero-bg2.jpg" alt="Photo by: The Aesthetic 2021" class="img-fluid">
       </div>
 
       <!-- Section Title -->
