--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="#" class="spotify"><i class="bi bi-spotify"></i></a>
-      <a href="#" class="discord"><i class="bi bi-discord"></i></a>
+      <a href="https://dsc.gg/supitsj" class="discord"><i class="bi bi-discord"></i></a>
+      <a href="https://facebook.com/fusedgg" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="https://github.com/jlucus" class="github"><i class="bi bi-github"></i></a>
+      <a href="https://t.me/gambaboost" class="telegram"><i class="bi bi-telegram"></i></a>
+      <a href="https://instagram.com/sup1tsj" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://linkedin.com/in/supitsj" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://open.spotify.com/artist/6bVpULP5vWYroGU1OU6B6e?si=A-M9N7sLRS2D4A6JdQu82w" class="spotify"><i class="bi bi-spotify"></i></a>
+      <a href="https://x.com/Jandrew_Tate" class="twitter"><i class="bi bi-twitter-x"></i></a>
+      <a href="https://youtube/supitsj" class="youtube"><i class="bi bi-youtube"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -64,32 +66,33 @@
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
       </ul>
-      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & Works-In-Progress</span> <i
+      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & 
+        Works-In-Progress</span> <i
             class="bi bi-chevron-down toggle-dropdown"></i></a>
         <ul>
           <li class="dropdown"><a href="#"><span>Fused Gaming</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Fused.gg</a></li>
-              <li><a href="#">Leaderboards.vip</a></li>
-              <li><a href="#">Lacroixla.com</a></li>
-              <li><a href="#">Cleanswipe.tv</a></li>
-              <li><a href="#">Britanycorp</a></li>
+              <li><a href="https://fused.gg">Fused.gg</a></li>
+              <li><a href="https://leaderboards.vip">Leaderboards.vip</a></li>
+              <li><a href="https://lacroixla.com">Lacroixla.com</a></li>
+              <li><a href="https://cleanswipe.tv">Cleanswipe.tv</a></li>
+              <li><a href="https://TBD.gg">Britanycorp</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">CAYC: Prison Queen</a></li>
-              <li><a href="#">CYAC Cases Concept</a></li>
+              <li><a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC: Prison Queen</a></li>
+              <li><a href="https://cayc-cases-web.vercel.app">CYAC Cases Concept</a></li>
             </ul>
           </li>
-          <li><a href="#">StakeReloadXS</a></li>
-          <li><a href="#">TokenSniped.com</a></li>
-          <li><a href="#">Hubleed</a></li>
-          <li><a href="#">Formerly Incarcerated</a></li>
-          <li><a href="#">ItsDifferentProductions.com</a></li>
-
-
+          <li><a href="https://github.com/stakereloadxs">StakeReloadXS</a></li>
+          <li><a href="https://probablyfair.org">ProbablyFair.org</a></li>
+          <li><a href="https://infuze.cloud">Infuze.Cloud</a></li>
+          <li><a href="https://tokensniped.com">TokenSniped.com</a></li>
+          <li><a href="https://hubleed.com/">Hubleed</a></li>
+          <li><a href="https://formerlyincarcerated.org">Formerly Incarcerated</a></li>
+          <li><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com</a></li>
         </ul>
       </li>
       <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
