--- a/index.html
+++ b/index.html
@@ -556,9 +556,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Contract Availability</a></h4>
-              <p class="description">I am currently open to accepting new contracts, small or large. Contact me at
-                hello@jlucus.dev </p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Web Design & UI/UX </a></h4>
+              <p class="description">Learn how studying your audience can lead to big changes. </p>
             </div>
           </div>
           <!-- End Service Item -->
@@ -566,46 +565,39 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Security Audit</a></h4>
-              <p class="description">Many businesses don't fully appreciate a developer wears many hats. By nature, we
-                are trained to find defects, and in software this can have unforseen consequences. You need a veteran
-                driving your development ship and guiding others how to spot and probe, report, and patch bugs. Not all
-                bugs are created equal. </p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Software Development</a></h4>
+              <p class="description">You need the right tools to get the jobs done. But there is no Home Depot for that! </p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Collaborations</a></h4>
-              <p class="description">Throughout my career I have always had a passion for and worked with, creators and
-                influencers of all sizes. Collab, Collab, Collab, Collab. Tell me more about your project or how you
-                would like to work together accomplishing something. </p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Product Management </a></h4>
+              <p class="description">Bringing a product to scale at market is insanity when you actually consider everything it takes to pull off. </p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Version 1.0 </a></h4>
-              <p class="description">If at first you don't succed, call it version 1.0. </p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Graphic Design </a></h4>
+              <p class="description">I failed art twice in highschool. Facts. </p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Redefining Impact </a></h4>
-              <p class="description">As a professional, I volunteer a specific number of hours to social causes and
-                philanthropy, for good cause, or less fortunate persons whom otherwise wouldn't be able to afford my
-                skills. Drop a line and let us know how we can help. </p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Marketing </a></h4>
+              <p class="description">Selling your brand is the end goal for any business. </p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Web 3.0 </a></h4>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Web 3.0 Champions</a></h4>
               <p class="description">Thinking about breaking into web 3 with your existing business? You have found a
                 champion to take you there! </p>
             </div>
