--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
               </div>
             </div>
             <p class="py-3">
-              I am most interested in creating with others, and am available to work on your next dApp project as a 1099
-              contractor. You and I will develop a Software Scope or Development Plan to create a custom, professional
-              and secure business space out in the web.
+              Interested in driving solutions in dApps or on-chain within a forward-thinking leading organization. I can also help you & your business tackle problems drawing on my industry expertise making quick work of routine matters; and if all else fails then I will engineer the solution between us and our goals.
             </p>
           </div>
         </div>
@@ -802,7 +800,7 @@
       </div>
       <div class="credits">
         Designed by <a href="https://jlucus.dev/">jlucus.dev</a>
-        <p> With ❤️ In the Bay Area</p>
+        <p> With ❤️ In the Bay Area. Refer someone and get paid! %5 incentives for referrals.</p>
       </div>
     </div>
 
