--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
             <p class="fst-italic py-3"> I am a Talented and dedicated Web and Blockchain Developer with 12 years of
-              experience and a demonstrated history of delivering exceptional outcomes. Proven ability to develop
-              innovative solutions on the blockchain, build decentralized apps, and leading teams. Seeking to use my
-              expertise to drive transformation in forward-thinking organization.</p>
+              experience and a demonstrated history of delivering exceptional outcomes. </p>
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -161,7 +159,7 @@
               </div>
             </div>
             <p class="py-3">
-              Interested in driving solutions in dApps or on-chain within a forward-thinking leading organization. I can also help you & your business tackle problems drawing on my industry expertise making quick work of routine matters; and if all else fails then I will engineer the solution between us and our goals.
+              Proven ability to develop innovative solutions on the blockchain, build decentralized apps, and leading teams. Seeking to use my expertise to drive transformation in forward-thinking organization.
             </p>
           </div>
         </div>
