done for today / now

--- a/index.html
+++ b/index.html
@@ -60,42 +60,41 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home </a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> About </a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume </a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio </a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services </a></li>
       </ul>
-      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & 
-        Works-In-Progress</span> <i
+      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span> Ventures+ </span> <i
             class="bi bi-chevron-down toggle-dropdown"></i></a>
         <ul>
-          <li class="dropdown"><a href="#"><span>Fused Gaming</span> <i
+          <li class="dropdown"><a href="#"><span>Fused Gaming </span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="https://fused.gg">Fused.gg</a></li>
-              <li><a href="https://leaderboards.vip">Leaderboards.vip</a></li>
-              <li><a href="https://lacroixla.com">Lacroixla.com</a></li>
-              <li><a href="https://cleanswipe.tv">Cleanswipe.tv</a></li>
-              <li><a href="https://TBD.gg">Britanycorp</a></li>
+              <li><a href="https://fused.gg">Fused.gg </a></li>
+              <li><a href="https://leaderboards.vip">Leaderboards.vip </a></li>
+              <li><a href="https://lacroixla.com">Lacroixla.com </a></li>
+              <li><a href="https://cleanswipe.tv">Cleanswipe.tv </a></li>
+              <li><a href="https://TBD.gg">Britanycorp </a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#"><span>Art </span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC: Prison Queen</a></li>
-              <li><a href="https://cayc-cases-web.vercel.app">CYAC Cases Concept</a></li>
+              <li><a href="https://cayc-cases-web.vercel.app">Rug Cases Concept </a></li>
             </ul>
           </li>
-          <li><a href="https://github.com/stakereloadxs">StakeReloadXS</a></li>
-          <li><a href="https://probablyfair.org">ProbablyFair.org</a></li>
-          <li><a href="https://infuze.cloud">Infuze.Cloud</a></li>
-          <li><a href="https://tokensniped.com">TokenSniped.com</a></li>
-          <li><a href="https://hubleed.com/">Hubleed</a></li>
-          <li><a href="https://formerlyincarcerated.org">Formerly Incarcerated</a></li>
-          <li><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com</a></li>
+          <li><a href="https://github.com/stakereloadxs">StakeReloadXS </a></li>
+          <li><a href="https://probablyfair.org">ProbablyFair.org </a></li>
+          <li><a href="https://infuze.cloud">Infuze.Cloud </a></li>
+          <li><a href="https://tokensniped.com">TokenSniped.com </a></li>
+          <li><a href="https://hubleed.com/">Hubleed </a></li>
+          <li><a href="https://formerlyincarcerated.org">Formerly Incarcerated </a></li>
+          <li><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com </a></li>
         </ul>
       </li>
-      <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+      <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact </a></li>
       </ul>
     </nav>
 
@@ -136,25 +135,25 @@
             <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <h2>UI/UX Designer &amp; Web Developer. </h2>
             <p class="fst-italic py-3"> I am a Talented and dedicated Web and Blockchain Developer with 12 years of
               experience and a demonstrated history of delivering exceptional outcomes. </p>
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Feb 17</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.jlucus.dev</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 916 850 0372</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Oakland CA, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday: </strong> <span>Feb 17 </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website: </strong> <span>www.jlucus.dev </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone: </strong> <span>+1 916 850 0372 </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City: </strong> <span>Oakland CA, USA </span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>39</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>hello@jlucus.dev</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age: </strong> <span>39 </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree: </strong> <span>Bachelors </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email: </strong> <span>hello@jlucus.dev </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance: </strong> <span>Available </span></li>
                 </ul>
               </div>
             </div>
@@ -180,7 +179,7 @@
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p><strong>Happy Clients </strong> <span>Around the world.</span></p>
+              <p><strong>Happy Clients </strong> <span>Around the world. </span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -189,7 +188,7 @@
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p><strong>Hours Saved </strong> <span>in wasted workforce.</span></p>
+              <p><strong>Hours Saved </strong> <span>in wasted workforce. </span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -198,7 +197,7 @@
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p><strong>Hours Of Support </strong> <span>last year.</span></p>
+              <p><strong>Hours Of Support </strong> <span>last year. </span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -207,7 +206,7 @@
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p><strong>Partner </strong> <span>organization & contacts.</span></p>
+              <p><strong>Partner </strong> <span>organization & contacts. </span></p>
             </div>
           </div><!-- End Stats Item -->
 
