--- a/service-details.html
+++ b/service-details.html
@@ -63,8 +63,7 @@
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
       </ul>
-      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures & 
-        Works-In-Progress</span> <i
+      <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures+</span> <i
             class="bi bi-chevron-down toggle-dropdown"></i></a>
         <ul>
           <li class="dropdown"><a href="#"><span>Fused Gaming</span> <i
@@ -74,7 +73,6 @@
               <li><a href="https://leaderboards.vip">Leaderboards.vip</a></li>
               <li><a href="https://lacroixla.com">Lacroixla.com</a></li>
               <li><a href="https://cleanswipe.tv">Cleanswipe.tv</a></li>
-              <li><a href="https://TBD.gg">Britanycorp</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -92,7 +90,7 @@
           <li><a href="https://itsdifferentproductions.com">ItsDifferentProductions.com</a></li>
         </ul>
       </li>
-      <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+      <li><a href="mailto:hello@jlucus.dev"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
 
@@ -122,13 +120,14 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <a href="#" class="active">Web Design</a>
-              <a href="#">Software Development</a>
-              <a href="#">Product Management</a>
-              <a href="#">Graphic Design</a>
-              <a href="#">Marketing</a>
+              <a href="#webdesign" class="active">Web Design</a>
+              <a href="#development">Software Development</a>
+              <a href="#product">Product Management</a>
+              <a href="#graphic">Graphic Design</a>
+              <a href="#marketing">Marketing</a>
             </div>
 
+            <section id="service-details" class="#webdesign">
             <h4>Web Design</h4>
             <p>We're serious about User Experience!</p>
           </div>
@@ -149,6 +148,30 @@
             </p>
             <p>
               sentiment analysis helps companies save time and resources by automating the emotional analysis of user feedback. Tools like Userlytics provide quick, actionable insights, enabling businesses to enhance the user experience more efficiently. 
+            </p>
+          </div>
+
+          <section id="service-details" class="#development">
+            <h4>Software Development</h4>
+            <p>We create the tools you need to succeed!</p>
+          </div>
+
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
+            <h3>Lore Ipsum</h3>
+            <p>
+              Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum.
+            </p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Lore Ipsum.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Lore Ipsum.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Lore Ipsum.</span></li>
+            </ul>
+            <p>
+              Lore Ipsum.
+            </p>
+            <p>
+              Lore Ipsum. 
             </p>
           </div>
 
